check label complete for finish drawing button

--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -297,6 +297,10 @@
               $(document).ready(function () {
                 socket.on('coco_image_anno', function (data) {
                   var canvas = document.getElementById("coco_image_anno");
+                  canvas.setAttribute("data", data['boxes']);
+                  var labels = []
+                  JSON.parse(data['boxes']).forEach(function (t) { labels.push(t['label']); });
+                  document.getElementById("finish_drawing").setAttribute("missing", labels.toString());
                   var ctx = canvas.getContext('2d');
                   var img = new Image();
                   if ('url' in data && 'boxes' in data) {
@@ -314,20 +318,48 @@
                   }
                 });
                 // finish_drawing button is enabled only when there are some drawings
-                document.getElementById("finish_drawing").disabled = true;
+//                document.getElementById("finish_drawing").disabled = true;
                 socket.on('latest_canvas', function (data) {
-                  document.getElementById("finish_drawing").disabled = false;
+                  var canvas = document.getElementById("coco_image_anno");
+                  var canvas_data = JSON.parse(canvas.getAttribute('data'));
+                  var gt_labels = {};
+                  var labels = {};
+                  canvas_data.forEach(function (t) {
+                    var label = t['label'];
+                    labels[label] = 0;
+                    if (label in gt_labels) {
+                      gt_labels[label] += 1;
+                    } else {
+                      gt_labels[label] = 1;
+                    }
+                  });
+
+                  JSON.parse(data['msg']).forEach(function (t) { labels[t['label']] += 1;});
+                  var missing = [];
+                  for (var key in labels) {
+                      if (labels.hasOwnProperty(key)) {
+                          if (gt_labels[key] !== labels[key]) {
+                            missing.push(key);
+                          }
+                      }
+                  }
+                  document.getElementById("finish_drawing").setAttribute("missing", missing.toString());
                 });
               });
 
             $("#finish_drawing").click(function (e) {
-              if(confirm('You sure the drawing has completed the layout, and there is no need for futher instructions?')) {
-                var now = new Date(Date.now());
-                var t = now.getHours() + ":" + now.getMinutes() + ":" + now.getSeconds();
-                socket.emit('text', {msg: "#END", t: t});
-                document.getElementById("textInput").setAttribute("placeholder", "DONE");
-                document.getElementById("textInput").disabled = true;
-                this.disabled = true;
+              var missing = ($("#finish_drawing")).attr("missing");
+              if (missing.length > 0) {
+                alert("missing objects: " + missing);
+              } else {
+                  if(confirm('You sure the drawing has completed the layout, and there is no need for futher instructions?')) {
+                    var now = new Date(Date.now());
+                    var t = now.getHours() + ":" + now.getMinutes() + ":" + now.getSeconds();
+                    socket.emit('text', {msg: "#END", t: t});
+                    document.getElementById("textInput").setAttribute("placeholder", "DONE");
+                    document.getElementById("textInput").disabled = true;
+                    this.disabled = true;
+                  }
               }
             });
             </script>
