changes for switching domains via command line

--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -175,7 +175,7 @@
 	              </br>
                       <div>Drag your mouse and draw in the canvas below</div>
 	              </br>
-                {% if mode == '2D shapes' %}
+                {% if mode == '2Dshape' %}
                       <div id="bbox_annotator"></div>
                 {%  else %}
                   <div>ADD the tool for coco images</div>
