--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -11,9 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <h4>Welcome {{ workerid }} ({{ username }} )! </h4>
-    <h5>Please answer the following test questsion. </h5>
-    <h5>Note that to do the task you need to pass at least 90% of the test questions.</h5>
+    <h5>Welcome {{ username }}! Please answer the following questsions. </h5>
     <!--<blockquote>-->
         <!--Please answer the following test questions.<br>-->
         <!--When you pass the test, you will be allowed to go to the task.<br>-->
@@ -22,16 +20,33 @@
         <!--{# Once you pass the quiz, you will enter the conversation. <br>#}-->
     <!--</blockquote>-->
 
-
     <form method="POST">
+      <ol class="collection">
+        <li>
+          {{ form_test.hidden_tag() }}
+          {{ form_test.r1.label }}
+              <img class="col s6" src={{form_test.r1data[0]}}> </img>
+              <ul>
+                {% for subfield in form_test.r1 %}
+                    <li>{{ subfield }} {{ subfield.label }}</li>
+                    <li><img class="col s6" src={{form_test.r1data[loop.index]}}</img></li>
+                {% endfor %}
+              </ul>
+          </li>
+        <li>
+          {{ form_test.r2.label }}
+          {{ form_test.r2 }}
+        </li>
+      </ol>
+      <!--
         <blockquote>
         {{ form_test.hidden_tag() }}
         {{ form_test.r1.label }}
-            <img src={{form_test.r1data[0]}}> </img>
+            <img class="col s6" src={{form_test.r1data[0]}}> </img>
             <ul>
             {% for subfield in form_test.r1 %}
                 <li>{{ subfield }} {{ subfield.label }}</li>
-                <li><img src={{form_test.r1data[loop.index]}}</img></li>
+                <li><img class="col s6" src={{form_test.r1data[loop.index]}}</img></li>
             {% endfor %}
                 </ul>
             </blockquote>
@@ -41,6 +56,7 @@
         {{ form_test.r2 }}
 
         </blockquote>
+      -->
 
         <!--{% for field in form_test %}-->
                 <!--{{ field.label }}-->
