added bot response but set it off

--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <h5 class="teal-text">Welcome <b>{{ username }}</b>! Please answer the two questsions based on the chat history in the image. </h5>
+    <h5>Welcome <b>{{ username }}</b>! Please answer the two questsions based on the chat history in the image. </h5>
 
     <form method="POST">
       {{ form_test.hidden_tag() }}
