--- a/main/templates/vision-dialog.chat.html
+++ b/main/templates/vision-dialog.chat.html
@@ -155,7 +155,7 @@
     <div class="center-align bg-header blue lighten-5 align-center">
   {% endif %}
       <!--Welcome! You will play the role of <b>{{role_name}}</b> in <b>{{mode}}</b> mode.-->
-      Welcome <b>{{username}}</b>! You will play the role of <b>{{role_name}}</b>.
+      Welcome <b>{{username}}</b>! You will play the role of <b>{{role_name}}</b> on {{progress}}.
       {% if tasks == [] %}
         <div>
           Click <button class="btn red lighten-1" id="end_task" href="#" onclick="end_task();" value="">SUBMIT</button> when the task is completed.
