duplicate certain js file for COCO

--- a/main/templates/test.html
+++ b/main/templates/test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Chat Login</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css" rel="stylesheet">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
